--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li> </li>
+          <li> </li>
+        </ul>
+        <h3> Kat Kat Kat </h3>
+      </nav>
+    </header>
 
   </body>
 </html>
