--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li> </li>
           <li> </li>
         </ul>
-        <h3>Kat Kat Kat</h3>
+        <h3>Kat's Site</h3>
       </nav>
     </header>
 
